#test_1
ADD_EXECUTABLE(class_object class_object.cpp)
ADD_EXECUTABLE(class_object_func class_object_func.cpp)
ADD_EXECUTABLE(class_construct class_construct.cpp)
ADD_EXECUTABLE(class_copy_construct class_copy_construct.cpp)
ADD_EXECUTABLE(class_friend_func class_friend_func.cpp)
ADD_EXECUTABLE(class_inline class_inline.cpp)
ADD_EXECUTABLE(class_static class_static.cpp)
ADD_EXECUTABLE(class_ptr class_ptr.cpp)