ADD_EXECUTABLE(use_new use_new.cpp)
ADD_EXECUTABLE(newstrct newstrct.cpp)
ADD_EXECUTABLE(delete delete.cpp)
ADD_EXECUTABLE(calling calling.cpp)
ADD_EXECUTABLE(twoarg twoarg.cpp)
ADD_EXECUTABLE(strfun strfun.cpp)
ADD_EXECUTABLE(strtref strtref.cpp)
ADD_EXECUTABLE(leftover leftover.cpp)
ADD_EXECUTABLE(funtemp funtemp.cpp)
ADD_EXECUTABLE(tempover tempover.cpp)
ADD_EXECUTABLE(file1 file1.cpp file2.cpp)